# Norwa-Performance-Center

performance_scorecard/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
performance_scorecard/docs/: ERPNext Performance Scorecard Module.docx  ~$PNext Performance Scorecard Module.docx
performance_scorecard/performance_scorecard/: cleanup.py  hooks.py  modules.txt
performance_scorecard/performance_scorecard/doctype/goal/: goal.json  goal.py
performance_scorecard/performance_scorecard/doctype/kpa_master/: kpa_master.json
performance_scorecard/performance_scorecard/doctype/kpi_master/: kpi_master.json  kpi_master.py
performance_scorecard/performance_scorecard/doctype/kra/: kra.json
performance_scorecard/performance_scorecard/doctype/performance_scorecard/: performance_scorecard.json
performance_scorecard/performance_scorecard/doctype/performance_update/: performance_update.json
performance_scorecard/performance_scorecard/doctype/scorecard_item/: scorecard_item.py
performance_scorecard/performance_scorecard/doctype/scorecard_settings/: scorecard_settings.js  scorecard_settings.py
performance_scorecard/performance_scorecard/page/performance_dashboard/: performance_dashboard.js  performance_dashboard.json  performance_dashboard.py
performance_scorecard/performance_scorecard/page/strategy_maps/: strategy_maps.js
performance_scorecard/performance_scorecard/page/strategy_plans/: strategy_plans.py
performance_scorecard/performance_scorecard/public/css/: performance_dashboard.css
(+43 files in other folders)
