[project]
name = "performance_scorecard"
authors = [
    { name = "Antigravity", email = "bot@example.com" }
]
description = "Performance Management App for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
